# Geometry

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CPMSourceVariable.cmake  README.md
.github/workflows/: build.yml  linux.yml  macos.yml  ubuntu.yml  windows.yml
benchmark/: Benchmark_Intersection_Line.cpp  Benchmark_Intersection_Plane.cpp  Benchmark_Intersection_Segment.cpp  CMakeLists.txt  LinAl.cpp
cmake/: Config.cmake.in  static_analysis.cmake  warnings.cmake
dependencies/: CMakeLists.txt
dependencies/core/: CMakeLists.txt
dependencies/crossguid/: CMakeLists.txt
dependencies/googletest/: CMakeLists.txt
dependencies/linal/: CMakeLists.txt
depenencies/core/: CMakeLists.txt
depenencies/crossguid/: CMakeLists.txt
depenencies/linal/: CMakeLists.txt
include/Geometry/: AABB.hpp  Cylinder.hpp  DistanceLine.hpp  DistancePlane.hpp  IntersectionLine.hpp  IntersectionPlane.hpp  Interval.hpp  InvalidIndex.hpp  Lcs.hpp  Plane.hpp  Polygon.hpp  Ray.hpp  Sphere.hpp
include/Geometry/HalfedgeMesh/: CubeMeshBuilder.hpp  HalfedgeMesh.hpp  HalfedgeMeshBuilder.hpp  SphereMeshBuilder.hpp
src/: CMakeLists.txt
src/include/Geometry/: AABB.hpp  Circle.hpp  ClosetPointOnLine.hpp  Cone.hpp  Cube.hpp  Cuboid.hpp  Cylinder.hpp  DistanceRay.hpp  DistanceSegment.hpp  ExtremePointsInDirection.hpp  Fwd.hpp  FwdGeometry.hpp  GeomPredicates.hpp  GeometryAssert.hpp  Handle.hpp  IntersectionPlane.hpp  IntersectionSegment.hpp  IntersectionSphere.hpp  Interval.hpp  InvalidIndex.hpp  KdTree.hpp  Lcs.hpp  Line.hpp  Plane.hpp  PointQueries.hpp  PolyLine.hpp  Polygon.hpp  Ray.hpp  Segment.hpp  Sphere.hpp  Triangle.hpp
src/include/Geometry/Details/: AABBDetails.hpp
src/include/Geometry/Distance/: DistanceLine.hpp  DistancePlane.hpp  DistanceRay.hpp  DistanceSegment.hpp  DistanceSphere.hpp
src/include/Geometry/Fwd/: FwdAABB.hpp  FwdCircle.hpp  FwdCone.hpp  FwdCuboid.hpp  FwdCylinder.hpp  FwdHalfedgeMesh.hpp  FwdLine.hpp  FwdPlane.hpp  FwdRay.hpp  FwdSegment.hpp  FwdSphere.hpp
src/include/Geometry/HalfedgeMesh/: CalcFaceHalfedges.hpp  CalcFacetNormal.hpp  CalcSegmentIndicesHalfedgeIndices.hpp  CalcTriangleIndices.hpp  CalcVertexFacets.hpp  CalcVertexNormals.hpp  ConversionHelper.hpp  DebugHelper.hpp  Facet.hpp  FacetUtils.hpp  Halfedge.hpp  HalfedgeIndices.hpp  HalfedgeMesh.hpp  HalfedgeMeshIndices.hpp  MeshIndexTraits.hpp  MeshIndices.hpp  MeshPoints.hpp  MeshTraits.hpp  SphereMeshBuilder.hpp  TriangleIndices.h  TriangleIndices.hpp  Vertex.hpp
src/include/Geometry/HalfedgeMeshBuilder/: CirclePoints.hpp  ConeMeshBuilder.hpp  CuboidMeshBuilder.hpp  CylinderMeshBuilder.hpp  DiscretizeCircle.hpp  HalfedgeMeshBuilder.hpp  MeshBuilder.hpp  MeshBuilderBase.hpp  MeshBuilderConfig.hpp  MeshTriangleAdder.hpp  SphereMeshBuilder.hpp
src/include/Geometry/Intersect/: BentleyOttmann.hpp  ClosetPointOnLine.hpp  IntersectAABB.hpp  IntersectAABBHelper.hpp  IntersectInterval.hpp  IntersectLine.hpp  IntersectLineUtil.hpp  IntersectPlane.hpp  IntersectSegment.hpp  IntersectSphere.hpp  IntersectTriangle.hpp
src/include/Geometry/Intersection/: IntersectionAABB.hpp  IntersectionInterval.hpp  IntersectionLine.hpp  IntersectionPlane.hpp  IntersectionSegment.hpp  IntersectionSphere.hpp
src/include/Geometry/Transform/: TransformAABB.hpp  TransformCircle.hpp  TransformCone.hpp  TransformCuboid.hpp  TransformCylinder.hpp  TransformSegment.hpp  TransformSphere.hpp  TransformVec.hpp
src/include/Geometry/Transformation/: TransformCircle.hpp  TransformCone.hpp  TransformCuboid.hpp  TransformCylinder.hpp  TransformSegment.hpp  TransformSphere.hpp  TransformVec.hpp  TransformatonAABB.hpp
src/include/Geometry/Utils/: Assert.hpp  Compiler.hpp  DefaultValues.hpp  GeometryAssert.hpp  Warnings.hpp
src/source/HalfedgeMeshBuilder/: MeshBuilder.cpp
tests/: CMakeLists.txt  ConeTest.cpp  CuboidTest.cpp  KdTreeMapTest.cpp  KdTreeTest.cpp  LineTest.cpp  PlaneTest.cpp  RayTest.cpp  SegmentTest.cpp  Test_AABB.cpp  Test_Circle.cpp  Test_Cone.cpp  Test_Cuboid.cpp  Test_Cylinder.cpp  Test_GeomVecOperations.cpp  Test_KdTree.cpp  Test_KdTreeMap.cpp  Test_Lcs.cpp  Test_PolyLine.cpp  Test_Ray.cpp  Test_Sphere.cpp  Test_Triangle.cpp  Test_VecOperations.cpp
tests/Distance/: CMakeLists.txt  DistanceLineTest.cpp  DistancePlaneTest.cpp  DistanceRayLineTest.cpp  DistanceRayTest.cpp  DistanceSegmentRayTest.cpp  DistanceSegmentTest.cpp  Test_Distance_Line.cpp  Test_Distance_Plane.cpp  Test_Distance_Ray.cpp  Test_Distance_RayLine.cpp  Test_Distance_Ray_Line.cpp  Test_Distance_Segment.cpp  Test_Distance_SegmentLine.cpp  Test_Distance_SegmentRay.cpp  Test_Distance_SegmentSegment.cpp  Test_Distance_Sphere.cpp
tests/HalfedgeMesh/: CMakeLists.txt  DebugHelperTest.cpp  HalfedgeMeshTest.cpp  LineIndicesTest.cpp  Test_CalcVertexFacets.cpp  Test_CalcVertexNormals.cpp  Test_FaceUtils.cpp  Test_Facet.cpp  Test_Halfedge.cpp  Test_HalfedgeMesh.cpp  Test_TriangleIndices.cpp  Test_Vertex.cpp
tests/Intersection/: BentleyOttmannTest.cpp  CMakeLists.txt  IntersectionAABBTest.cpp  IntersectionSegmentTest.cpp  IntersectionSphereTest.cpp  IntersectionTriangleTest.cpp  Test_BentleyOttmann.cpp  Test_Intersection_AABB.cpp  Test_Intersection_Interval.cpp  Test_Intersection_Line.cpp  Test_Intersection_Plane.cpp  Test_Intersection_Segment.cpp  Test_Intersection_Sphere.cpp
tests/MeshBuilder/: CMakeLists.txt  ConeMeshBuilderTest.cpp  CylinderMeshBuilderTest.cpp  MeshTestHelper.cpp  MeshTestHelper.h  SphereMeshBuilderTest.cpp  SphereTestHelper.cpp  SphereTestHelper.h  Test_ConeMeshBuilder.cpp  Test_CuboidMeshBuilder.cpp  Test_CylinderMeshBuilder.cpp  Test_MeshBuilder.cpp  Test_MeshBuilderHelper.cpp  Test_SphereMeshBuilder.cpp
tests/Transformation/: CMakeLists.txt  Test_Transformation_AABB.cpp  Test_Transformation_Circle2.cpp  Test_Transformation_Circle3.cpp  Test_Transformation_Cone.cpp  Test_Transformation_Cylinder.cpp  Test_Transformation_Sphere.cpp  TransformationAABBTest.cpp  TransformationCircle2Test.cpp  TransformationConeTest.cpp  TransformationCylinderTest.cpp  TransformationSphereTest.cpp
