function(create_geometry_test testName)
    add_executable(${testName} ${testName}.cpp)
    target_link_libraries(${testName} PRIVATE gtest_main Geometry::Geometry)
    add_test(NAME Geometry.${testName} COMMAND ${testName})
endfunction()

add_subdirectory(Distance)
add_subdirectory(HalfedgeMesh)
add_subdirectory(Intersection)
add_subdirectory(MeshBuilder)
add_subdirectory(Transformation)

create_geometry_test(Test_AABB)
create_geometry_test(Test_Circle)
create_geometry_test(Test_Sphere)
create_geometry_test(Test_Ray)
create_geometry_test(Test_VecOperations)
create_geometry_test(Test_Cone)
create_geometry_test(Test_Cuboid)
create_geometry_test(Test_Triangle)
