function(create_geometry_test testName)
    add_executable(${testName} ${testName}.cpp)
    target_link_libraries(${testName} PRIVATE gtest_main Geometry::Geometry)
    add_test(NAME Geometry.${testName} COMMAND ${testName})
endfunction()

add_subdirectory(Distance)
add_subdirectory(HalfedgeMesh)
add_subdirectory(Intersection)
add_subdirectory(MeshBuilder)
add_subdirectory(Transformation)

create_geometry_test(AABBTest)
create_geometry_test(CircleTest)
create_geometry_test(SphereTest)
create_geometry_test(RayTest)
create_geometry_test(GeomVecOperationsTest)
create_geometry_test(KdTreeTest)
create_geometry_test(KdTreeMapTest)
create_geometry_test(ConeTest)
create_geometry_test(CuboidTest)
create_geometry_test(TriangleTest)
