function(create_test test_name)
    add_executable(${test_name} ${test_name}.cpp)
    target_link_libraries(${test_name} PRIVATE gtest_main Geometry::Geometry)
    add_test(NAME ${test_name} COMMAND ${test_name})
endfunction()

create_test(Test_Distance_Line)
create_test(Test_Distance_Ray)
create_test(Test_Distance_RayLine)
create_test(Test_Distance_Plane)
create_test(Test_Distance_Segment)
create_test(Test_Distance_SegmentLine)
create_test(Test_Distance_SegmentRay)
create_test(Test_Distance_SegmentSegment)
create_test(Test_Distance_Sphere)
