add_library(meshBuilderTestHelper STATIC SphereTestHelper.cpp MeshTestHelper.cpp MeshTestHelper.h Test_MeshBuilderHelper.cpp)
target_link_libraries(meshBuilderTestHelper PUBLIC gtest Geometry::Geometry)

add_executable(Test_MeshBuilderHelper Test_MeshBuilderHelper.cpp)
target_link_libraries(Test_MeshBuilderHelper PRIVATE gtest_main Geometry::Geometry meshBuilderTestHelper)
add_test(NAME Test_MeshBuilderHelper COMMAND Test_MeshBuilderHelper)

add_executable(Test_MeshBuilder Test_CuboidMeshBuilder.cpp)
target_link_libraries(Test_MeshBuilder PRIVATE gtest_main Geometry::Geometry)
add_test(NAME Test_MeshBuilder COMMAND Test_MeshBuilder)

add_executable(Test_SphereMeshBuilder Test_SphereMeshBuilder.cpp)
target_link_libraries(Test_SphereMeshBuilder PRIVATE gtest_main Geometry::Geometry meshBuilderTestHelper)
add_test(NAME Test_SphereMeshBuilder COMMAND Test_SphereMeshBuilder)
