add_library(meshBuilderTestHelper STATIC SphereTestHelper.cpp)
target_link_libraries(meshBuilderTestHelper PUBLIC gtest Geometry::Geometry)

create_geometry_test(CuboidMeshBuilderTest)
create_geometry_test(ConeMeshBuilderTest)
create_geometry_test(CylinderMeshBuilderTest)

add_executable(SphereMeshBuilderTest SphereMeshBuilderTest.cpp)
target_link_libraries(SphereMeshBuilderTest PRIVATE gtest_main Geometry::Geometry meshBuilderTestHelper)
add_test(NAME Geometry.SphereMeshBuilderTest COMMAND SphereMeshBuilderTest)
